--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browserify": "^9.0.3",
     "gulp": "^3.8.7",
     "gulp-connect": "^2.2.0",
+    "gulp-gh-pages": "^0.5.0",
     "gulp-sass": "^1.3.3",
     "gulp-util": "^3.0.4",
     "reactify": "^1.1.0",
